feat: add dropdown & button

--- a/index.html
+++ b/index.html
@@ -5,18 +5,28 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" type="text/css" href="reset.css">
-  <link rel="stylesheet" type="text/css" href="fonts.css">
-  <link rel="stylesheet" type="text/css" href="global.css">
-  <link rel="stylesheet" type="text/css" href="styles.css">
+  <link rel="stylesheet" type="text/css" href="/css/reset.css">
+  <link rel="stylesheet" type="text/css" href="/css/fonts.css">
+  <link rel="stylesheet" type="text/css" href="/css/global.css">
+  <link rel="stylesheet" type="text/css" href="/styles.css">
   <title>API</title>
 </head>
 
 <body>
-    <!-- Header of Page -->
-    <header class="header-container">
-      <h1>Studio Ghibli Characters</h1>
-    </header>
+  <!-- Header of Page -->
+  <header class="header-container">
+    <h1>Studio Ghibli Characters</h1>
+  </header>
+
+  <!-- Dropdown -->
+  <section>
+    <select id="dropdown"></select>
+    <button>Confirm</button>
+  </section>
+
+  <!-- Cards -->
+  <div id="cards-container"></div>
+
  <script src="scripts.js" defer></script>
 </body>
 
