feat: render character card

--- a/index.html
+++ b/index.html
@@ -20,12 +20,17 @@
 
   <!-- Dropdown -->
   <section>
+    <div>
     <select id="dropdown"></select>
-    <button>Confirm</button>
-  </section>
+    <button id="confirm-button" class="button">Confirm</button>
+  </div>
+
+
 
   <!-- Cards -->
-  <div id="cards-container"></div>
+  <div class="container">
+    <ul id="results" class="cards-container"></ul>
+  </div>
 
  <script src="scripts.js" defer></script>
 </body>
