--- a/index.html
+++ b/index.html
@@ -5,10 +5,10 @@
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <link rel="stylesheet" type="text/css" href="/css/reset.css">
-  <link rel="stylesheet" type="text/css" href="/css/fonts.css">
-  <link rel="stylesheet" type="text/css" href="/css/global.css">
-  <link rel="stylesheet" type="text/css" href="/styles.css">
+  <link rel="stylesheet" type="text/css" href="css/reset.css">
+  <link rel="stylesheet" type="text/css" href="css/fonts.css">
+  <link rel="stylesheet" type="text/css" href="css/global.css">
+  <link rel="stylesheet" type="text/css" href="styles.css">
   <title>API</title>
 </head>
 
@@ -21,6 +21,7 @@
   <!-- Dropdown -->
   <section>
     <div>
+    <h4>Select a Character:</h4>  
     <select id="dropdown"></select>
     <button id="confirm-button" class="button">Confirm</button>
   </div>
