--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
   <link rel="stylesheet" type="text/css" href="css/fonts.css">
   <link rel="stylesheet" type="text/css" href="css/global.css">
   <link rel="stylesheet" type="text/css" href="styles.css">
+
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Nanum+Myeongjo&display=swap" rel="stylesheet">
   <title>API</title>
 </head>
 
@@ -19,18 +23,18 @@
   </header>
 
   <!-- Dropdown -->
-  <section>
-    <div>
+  <section class="container">
     <h4>Select a Character:</h4>  
-    <select id="dropdown"></select>
+    <select class="custom-select" id="dropdown"></select>
+    <br></br>
     <button id="confirm-button" class="button">Confirm</button>
-  </div>
+  </section>
 
 
   <!-- Cards -->
-  <div class="container">
+  <section class="container">
     <ul id="results" class="cards-container"></ul>
-  </div>
+  </section>
 
  <script src="scripts.js" defer></script>
 </body>
