feat: add species API endpoint

--- a/index.html
+++ b/index.html
@@ -9,7 +9,6 @@
   <link rel="stylesheet" type="text/css" href="css/fonts.css">
   <link rel="stylesheet" type="text/css" href="css/global.css">
   <link rel="stylesheet" type="text/css" href="styles.css">
-
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Bebas+Neue&family=Nanum+Myeongjo&display=swap" rel="stylesheet">
@@ -20,6 +19,7 @@
   <!-- Header of Page -->
   <header class="header-container">
     <h1>Studio Ghibli Characters</h1>
+    <h2>Find out more about these characters, as well as which film they're in!</h2>
   </header>
 
   <!-- Dropdown -->
